Reformat class convensions.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,98 +15,91 @@ page-twitter-preview-site: bryancee
 page-twitter-preview-creator: bryancee
 page-twitter-preview-image: http://placehold.it/560/300
 ---
-<div class="container">
-  <main class="main-content page-title">
-    <div class="home--intro">
-      <h2 class="heading-title">Listen to my latest <span>music</span></h2>
-      <p class="home--intro-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima illo voluptatem explicabo soluta quibusdam eveniet sit ipsa tenetur quod, est labore. Dolorum ea, inventore voluptate facere hic sed saepe assumenda.</p>
-    </div>
-  </main>
-</div>
-
-<div class="container testimonials home--testimonial">
-  <div class="main-content page-{{slug}} home--testimonial-content align-middle">
-    <div class="home--testimonial-cell-1">
-      <p class="home--testimonial-text">
-        <span class="home--testimonial-span">
-          <i>"Bryan Cee, and the Wibesmen, have already made a splash in Minnesota, and you can be sure that the smooth
-            sounds, the warm melodies, R&B-tinged, hip-shaking island grooves will make a smooth transition from the
-            Caribbean to the Twin Cities."</i>
-        </span>
-        <br>
-        <small class="home--testimonial-wrapper-small">-
-          <a class="home--testimonial-link" href="https://tcagenda.com/2017/sunshine-snowfall-bryan-cee-story/" target="_blank">Twin Cities Agenda</a>
-        </small>
-      </p>
-      <p class="home--testimonial-wrapper-p">
-        <a class="button home--testimonial-link--more" href="{{root}}bio">Read More</a>
-      </p>
-    </div>
-    <div class="home--testimonial-cell-2">
-      <div class="home--testimonial-wrapper c-author-image">
-        <img class="home--testimonial-img" src="{{root}}assets/img/bryan-quot-img.png" />
+<!-- <div class="home_intro-wrap">
+  <div class="container">
+    <main class="main-content">
+      <h1 class="page-title home_intro-title">Listen to my latest music</h1>
+      <div class="home_intro-content">
+        <p class="home_intro-content_p">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima illo voluptatem explicabo soluta quibusdam eveniet sit ipsa tenetur quod, est labore. Dolorum ea, inventore voluptate facere hic sed saepe assumenda.
+        </p>  
       </div>
-    </div>
-  </div>
-</div>
-
-<div class="page-home">
-
-  <div class="grid-container  padding-top padding-bottom">
-    <div class="grid-x grid-padding-x grid-padding-y align-middle">
-      <div class="scene01 small-12 small-order-1 medium-6 medium-order-1 cell">
-        <img src="{{root}}assets/img/bryanCee--wibe-of-life.jpg" />
-      </div>
-      <div class="small-12 small-order-2 medium-6 medium-order-2 cell align-self-">
-        <h2>The Wibe Has Hit the Streets!</h2>
-        <p>For those who are not familiar with the term “Wibe,” it’s basically a Bahamian term that was coined by my generation
-          which refers to specific situations that impacted change or were a transition to a new stage.</p>
-        <p>It’s a new way of thinking. It was a term that was vague enough that it can be just about anything but it was also
-          specific enough to comprehend the subject matter. Each song on the album explores the Wibes that I have went through
-          in my life at one point or another.</p>
-        <div class="lead text-center">Available On</div>
-        {{> purchase-buttons}}
-      </div>
-
-
-    </div>
-  </div>
-
-  {{> c-event}}
-</div>
-
-<!-- <div class="grid-container">
-  <div class="grid-x">
-    <div class="cell small-12">
-      <div class="fb-page" data-href="https://www.facebook.com/BryanCeemusic" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/BryanCeemusic" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/BryanCeemusic">Bryan Cee - Artist</a></blockquote></div>
-    </div>
+    </main>
   </div>
 </div> -->
-
-<!-- <div class="grid-container bg-blue padding-top padding-bottom border-top border-bottom">
-  <div class="grid-x grid-padding-x align-top">
-    <div class="small-12 cell">
-      <h2>Latest Media</h2>
-
-    </div>
-    <div class="small-12 medium-7 cell margin-0">
-      <div class="responsive-embed margin-0"><iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/38535770&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></div>
-
-    </div>
-    <div class="scene01 small-12 medium-5 cell margin-0 ">
-      <ul class="menu vertical padding-top padding-bottom callout">
-        <li><a href="{{root}}music/dance-with-you">Dance With You</a></li>
-        <li><a href="{{root}}music/going-home">Going Home</a></li>
-        <li><a href="{{root}}music/in-the-moment">In The Moment</a></li>
-        <li><a href="{{root}}music/long-lost-brother">Long Lost Brother</a></li>
-        <li><a href="{{root}}music/mr-officer">Mr. Officer</a></li>
-        <li><a href="{{root}}music/see-your-face">See Your Face</a></li>
-        <li><a href="{{root}}music/take-my-life">Take My Life</a></li>
-        <li><a href="{{root}}music/when-you-love-somebody">When You Love Somebody</a></li>
-      </ul>
+<div class="home_feature ">
+  <div class="home_album-wrap medium-margin-collapse">
+    <div class="container home_album">
+      <div class="main-content">
+        <div class="home_album-cell-1">
+          <img class="home_album-img" src="{{root}}assets/img/bryanCee--wibe-of-life.jpg" />
+        </div>
+        <div class="home_album-cell-2">
+          <h2>The Wibe Has Hit the Streets!</h2>
+          <p>For those who are not familiar with the term “Wibe,” it’s basically a Bahamian term that was coined by my generation which refers to specific situations that impacted change or were a transition to a new stage.</p>
+          <p>It’s a new way of thinking. It was a term that was vague enough that it can be just about anything but it was also specific enough to comprehend the subject matter. Each song on the album explores the Wibes that I have went through
+            in my life at one point or another.</p>
+          <div class="">Available On</div>
+          {{> purchase-buttons}}
+        </div>
+      </div>
     </div>
   </div>
+  <div class="home_event-wrap">
+    <div class="container home_event">
+      <div class="main-content">
+        <div class="home_event-cell-1">
+          <img class="home_event-img" src="{{root}}assets/img/event--global-midtown-market.jpg" />
+        </div>
+        <div class="home_event-cell-2">
+          <p class="home_event-date">July 9th</p>
+          <h4 class="home_event-title">Midtown Global Market 10th Anniversary Celebration and the Midtown Global Music Festival</h4>
+          <p>Join us in celebration of Midtown Global Market's 10th Anniversary at the Midtown Global Music Festival on Saturday, July 9 from 10 a.m. - 8:30 p.m. It will be a day filled with recognition, reflection, multicultural music and dance to highlighted Midtown Global Market as a center where community gathers!</p>
+          <p>
+            <a class="button" href="{{root}}shows">View More Events</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+</div>
+<div class="home_review-wrap">
+  <div class="container home_review">
+    <div class="main-content page-{{slug}}">
+      <div class="home_review-cell-1">
+        <img class="home_review-img" src="{{root}}assets/img/bryan-quot-img.png" />
+      </div>
+      <div class="home_review-cell-2">
+        <blockquote>
+          <p>Bryan Cee, and the Wibesmen, have already made a splash in Minnesota, and you can be sure that the smooth sounds, the warm melodies, R&B-tinged, hip-shaking island grooves will make a smooth transition from the Caribbean to the Twin Cities.</p>
+          <footer>
+            <cite><a class="home--review-link" href="https://tcagenda.com/2017/sunshine-snowfall-bryan-cee-story/" target="_blank">Twin Cities Agenda</a></cite>
+          </footer>
+        </blockquote>
+        <p class="home_review-content">
+          <a class="button home--testimonial-link--more" href="{{root}}bio">Read More</a>
+        </p>
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="scene01 small-12 medium-5 cell margin-0 ">
+  <ul class="menu vertical padding-top padding-bottom callout">
+    <li><a href="{{root}}music/dance-with-you">Dance With You</a></li>
+    <li><a href="{{root}}music/going-home">Going Home</a></li>
+    <li><a href="{{root}}music/in-the-moment">In The Moment</a></li>
+    <li><a href="{{root}}music/long-lost-brother">Long Lost Brother</a></li>
+    <li><a href="{{root}}music/mr-officer">Mr. Officer</a></li>
+    <li><a href="{{root}}music/see-your-face">See Your Face</a></li>
+    <li><a href="{{root}}music/take-my-life">Take My Life</a></li>
+    <li><a href="{{root}}music/when-you-love-somebody">When You Love Somebody</a></li>
+  </ul>
 </div> -->
+
 
 
 
